--- a/src/components/RegisterPage/RegisterPage.css
+++ b/src/components/RegisterPage/RegisterPage.css
@@ -1,7 +1,3 @@
-.register-container {
-  height : 100%;
-}
-
 .button-register {
   min-width: 10rem;
   min-height: 3rem;
@@ -16,4 +12,15 @@
 .button-login button {
   max-width: 50%;
   padding: 0.2rem;
+}
+
+.form {
+  min-height: 100vh;
+  flex-direction: column;
+  width: 100%;
+  display: flex;
+}
+
+.register-form {
+  justify-content: center;
 }
