--- a/src/components/LoginPage/LoginPage.css
+++ b/src/components/LoginPage/LoginPage.css
@@ -1,8 +1,3 @@
-.login-container {
-  position: absolute;
-  height: 100%;
-}
-
 .button-login {
   min-width: 10rem;
   min-height: 3rem;
@@ -19,7 +14,13 @@
   padding: 0.2rem;
 }
 
+.form {
+  min-height: 100vh;
+  flex-direction: column;
+  width: 100%;
+  display: flex;
+}
+
 .login-form {
-  height: 100%;
   justify-content: center;
 }
